Complete gMap + update sprite.png + change footer

--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -13,4 +13,5 @@ block content
     div.parallax__img.parallax__img--six
 
     script.
-        var myAddress = "Rue Peetermans 80, 4100 Seraing, Belgique"
+        var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
+        var addressRsts = ["Rue Peetermans 40, 4100 Seraing, Belgique", "Rue Puit Marie 10, 4100 Seraing, Belgique","Rue du Marais 30, 4100 Seraing, Belgique"]
