--- a/_mockUp/src/styl/ITCSS/base/_base.heading.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.heading.styl
@@ -21,6 +21,7 @@ wf_heading-size-6 = 13.090px
 //
 h1, .alpha
     rem-fallback( font-size, wf_heading-size-1 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 14px )
     &:first-child
@@ -28,6 +29,7 @@ h1, .alpha
 
 h2, .beta
     rem-fallback( font-size, wf_heading-size-2 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 14px )
     &:first-child
@@ -35,6 +37,7 @@ h2, .beta
 
 h3, .gamma
     rem-fallback( font-size, wf_heading-size-3 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 14px )
     &:first-child
@@ -42,6 +45,7 @@ h3, .gamma
 
 h4, .delta
     rem-fallback( font-size, wf_heading-size-4 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 7px )
     &:first-child
@@ -49,6 +53,7 @@ h4, .delta
 
 h5, .epsilon
     rem-fallback( font-size, wf_heading-size-5 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 7px )
     &:first-child
@@ -56,6 +61,7 @@ h5, .epsilon
 
 h6, .zeta
     rem-fallback( font-size, wf_heading-size-6 )
+    font-family wf_font-heading
     rem-fallback( padding, 24px 0 12px 0 )
     rem-fallback( margin-bottom, 7px )
     &:first-child
