--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -289,6 +289,7 @@ h1,
 .alpha {
   font-size: 41.887px;
   font-size: 2.6179375rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 14px;
@@ -302,6 +303,7 @@ h2,
 .beta {
   font-size: 34.269px;
   font-size: 2.1418125rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 14px;
@@ -315,6 +317,7 @@ h3,
 .gamma {
   font-size: 25.888px;
   font-size: 1.618rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 14px;
@@ -328,6 +331,7 @@ h4,
 .delta {
   font-size: 21.18px;
   font-size: 1.32375rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 7px;
@@ -341,6 +345,7 @@ h5,
 .epsilon {
   font-size: 16px;
   font-size: 1rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 7px;
@@ -354,6 +359,7 @@ h6,
 .zeta {
   font-size: 13.09px;
   font-size: 0.818125rem;
+  font-family: "RobotoHeading", sans-serif;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
   margin-bottom: 7px;
@@ -477,14 +483,6 @@ h6:first-child,
   margin-right: 8px;
   margin-right: 0.5rem;
 }
-.social__link--rss {
-  width: 100%;
-  height: 100%;
-  background: url("images/sprite.png") -50px -50px;
-}
-.social__link--rss:hover {
-  background: url("images/sprite.png") -50px -10px;
-}
 .social__link--fb {
   width: 100%;
   height: 100%;
@@ -492,6 +490,14 @@ h6:first-child,
 }
 .social__link--fb:hover {
   background: url("images/sprite.png") -10px -10px;
+}
+.social__link--rss {
+  width: 100%;
+  height: 100%;
+  background: url("images/sprite.png") -50px -50px;
+}
+.social__link--rss:hover {
+  background: url("images/sprite.png") -50px -10px;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
@@ -612,6 +618,31 @@ h6:first-child,
   text-indent: -62500rem;
 }
 .newsletter__submit:hover {
+  cursor: pointer;
+}
+.forms__search {
+  position: relative;
+}
+.search__submit {
+  position: absolute;
+  width: 25px;
+  width: 1.5625rem;
+  height: 25px;
+  height: 1.5625rem;
+  background: url("images/sprite.png") -120px -10px;
+  top: 9px;
+  top: 0.5625rem;
+  right: 5px;
+  right: 0.3125rem;
+  border: none;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  text-indent: -1000000px;
+  text-indent: -62500rem;
+}
+.search__submit:hover {
   cursor: pointer;
 }
 .forms,
