--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -26,6 +26,22 @@
     &:hover
         cursor pointer
 
+.forms__search
+    position relative
+.search__submit
+    position absolute
+    rem-fallback( width, 25px )
+    rem-fallback( height, 25px )
+    background: url("images/sprite.png") -120px -10px
+    rem-fallback( top, 9px )
+    rem-fallback( right, 5px )
+    border none
+    border-radius( 0.5rem )
+    rem-fallback( text-indent, -1000000px )
+    &:hover
+        cursor pointer
+
+
 .forms
 .input__text
     width 100%
