--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -34,7 +34,7 @@ div.parallax__body.myFooter
             form#ancreError.forms__newsletter
                 input(itemprop="object" type="text" placeholder="votre@mail.com").input__text
                 input(itemprop="target" type="submit" value="S'inscrire").newsletter__submit
-                span(itemprop="error").error Il y a une faute de frappe bitchies
+                span(itemprop="error").error Il y a une faute de frappe
         
         div.signature
             p
