--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -28,6 +28,11 @@
 
 .forms__search
     position relative
+    rem-fallback( width, 250px )
+.forms__search--right
+    position absolute
+    top 0
+    right 0
 .search__submit
     position absolute
     rem-fallback( width, 25px )
