--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -31,3 +31,5 @@
 // - evenements.jade
 .parallax__img--six
     background: url("images/parallax/backgroundImage5.jpg") center fixed no-repeat
+.parallax__img--seven
+    background: url("images/parallax/backgroundImage6.jpg") center fixed no-repeat
