--- a/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
@@ -4,14 +4,14 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #COMPONENTS RESTAURANTS
+//    #COMPONENTS THUMBNAILS
 //\*------------------------------------*/
 
 
 
 
 // Style for show restaurants
-.restaurants
+.thumbnails
     width: 33.333333%
     rem-fallback( max-height, 300px )
     rem-fallback( padding, 16px 8px )
@@ -20,7 +20,7 @@
     transition( all, 0.5s )
     &:hover
         background: wf_background-restaurants
-.restaurants__img
+.thumbnails__img
     rem-fallback( min-width, 320px )
     rem-fallback( min-height, 200px )
     rem-fallback( max-width, 325px )
