--- a/_mockUp/src/styl/ITCSS/objects/_objects.position.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.position.styl
@@ -4,23 +4,12 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #OBJECTS PARALLAX
+//    #OBJECTS POSITION
 //\*------------------------------------*/
 
 
 
 
-// Parallax placements
-.parallax__img
+// Position relative on élement
+.position--relative
     position relative
-    min-height 75vh
-    &:before
-        content ""
-        position absolute
-        top 0
-        right 0
-        bottom 0
-        left 0
-
-.parallax__body
-    width: 100vw
