--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -26,6 +26,7 @@
 // - Objects
 @import "ITCSS/objects/_objects.inline-block.styl"
 @import "ITCSS/objects/_objects.block.styl"
+@import "ITCSS/objects/_objects.position.styl"
 @import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
@@ -35,7 +36,7 @@
 @import "ITCSS/components/_components.parallax.styl"
 @import "ITCSS/components/_components.footer.styl"
 @import "ITCSS/components/_components.forms.styl"
-@import "ITCSS/components/_components.restaurants.styl"
+@import "ITCSS/components/_components.thumbnails.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
