--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -29,15 +29,15 @@ block content
                 - numberItem++
             div.pagination
                 span.inline-block.pagination__element
-                    a(href="#") &lang;&lang;
+                    a(href="#").block.removeLink.pagination__element--links &lang;&lang;
                 span.inline-block.pagination__element
-                    a(href="#") 1
+                    a(href="#").block.pagination__element--links 1
                 span.inline-block.pagination__element
-                    a(href="#") 2
+                    a(href="#").block.pagination__element--links 2
                 span.inline-block.pagination__element
-                    a(href="#") 3
+                    a(href="#").block.pagination__element--links 3
                 span.inline-block.pagination__element
-                    a(href="#") &rang;&rang;
+                    a(href="#").block.removeLink.pagination__element--links &rang;&rang;
                 
     div.parallax__img.parallax__img--seven    
         
