--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -33,7 +33,9 @@ wf_error-color                  =    #c0392b
 wf_background-header            =    #3498db
 wf_background-parallax          =    #ffffff
 wf_background-footer            =    #ffffff
-wf_background-restaurants       =    #fafafa
+wf_background-thumbnails        =    #fafafa
+wf_background-pagination        =    #fafafa
+wf_background-pagination-hover  =    #ffffff
 
 // Border colors
 wf_border-menu                  =    #fbfbfb
