--- a/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
@@ -10,7 +10,7 @@
 
 
 
-// Style for show restaurants
+// Style for show thumbnail
 .thumbnails
     width: 33.333333%
     rem-fallback( max-height, 300px )
