Correct Parallax + thumbnails

--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -9,7 +9,12 @@ block content
     div#slideMap.parallax__img
     div.parallax__body  
         h3.gamma Inscrivez-vous pour le prochain Resto-Rallye
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
+        p  
+            | Désireux de nous rejoindre à notre prochain événement&nbsp;? Rien de plus simple, il suffit de remplir le formulaire ci-dessous. Dépèchez-vous&nbsp;! Il ne resque actuellement que 
+            span.hightlight 30 places 
+            | disponible.
+        p Vous pouvez aussi décider d'offrir des places pour le prochain événement à l'un de vos amis. Indiquez le en cochant la case correspondante et completer le formulaire, nous nous occuperons de lui envoyer l'invitation.
+        
 
     div.parallax__img.parallax__img--six
     div.parallax__body
