--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -12,8 +12,7 @@
 
 // Parallax style
 .parallax__body
-    padding: 4vh 10%
-    box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8)
+    padding: 2.5% 10%
     background: wf_background-parallax
 
 // Parallax images
