--- a/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
@@ -16,12 +16,9 @@
     rem-fallback( max-height, 300px )
     rem-fallback( padding, 16px 8px )
     rem-fallback( margin-bottom, 24px )
-    border-radius( 4px )
-    transition( all, 0.5s )
+    transition( all, 0.25s )
     &:hover
         background: wf_background-thumbnails
 .thumbnails__img
-    rem-fallback( min-width, 320px )
-    rem-fallback( min-height, 200px )
-    rem-fallback( max-width, 325px )
-    rem-fallback( max-height, 205px )
+    width 100%
+    rem-fallback( max-height, 210px )
