--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -414,7 +414,8 @@ h6:first-child,
 */
 .parallax__img {
   position: relative;
-  min-height: 75vh;
+  min-height: 550px;
+  min-height: 34.375rem;
 }
 .parallax__img:before {
   content: "";
@@ -425,7 +426,9 @@ h6:first-child,
   left: 0;
 }
 .parallax__body {
-  width: 100vw;
+  max-width: 1260px;
+  max-width: 78.75rem;
+  margin: 0 auto;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
@@ -563,8 +566,7 @@ h6:first-child,
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 .parallax__body {
-  padding: 4vh 10%;
-  box-shadow: 0 -1px 10px rgba(0,0,0,0.8);
+  padding: 2.5% 10%;
   background: #fff;
 }
 .parallax__img--one {
@@ -620,10 +622,6 @@ h6:first-child,
   right: 5px;
   right: 0.3125rem;
   border: none;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  border-radius: 0.5rem;
   text-indent: -1000000px;
   text-indent: -62500rem;
 }
@@ -647,37 +645,26 @@ h6:first-child,
   height: 25px;
   height: 1.5625rem;
   background: url("images/sprite.png") -120px -10px;
-  top: 9px;
-  top: 0.5625rem;
-  right: 5px;
-  right: 0.3125rem;
+  top: 7px;
+  top: 0.4375rem;
+  right: 8px;
+  right: 0.5rem;
   border: none;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  border-radius: 0.5rem;
   text-indent: -1000000px;
   text-indent: -62500rem;
 }
 .search__submit:hover {
   cursor: pointer;
 }
-.forms,
 .input__text {
   width: 100%;
   background-color: #f5f5f5;
   padding: 12px 24px;
   padding: 0.75rem 1.5rem;
   border: none;
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -ms-border-radius: 0.5rem;
-  border-radius: 0.5rem;
 }
-.forms:focus,
 .input__text:focus {
   background-color: #fafafa;
-  outline: none;
 }
 .error {
   position: relative;
@@ -729,27 +716,18 @@ h6:first-child,
   padding: 1rem 0.5rem;
   margin-bottom: 24px;
   margin-bottom: 1.5rem;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -ms-transition: all 0.25s;
+  transition: all 0.25s;
 }
 .thumbnails:hover {
   background: #f5f5f5;
 }
 .thumbnails__img {
-  min-width: 320px;
-  min-width: 20rem;
-  min-height: 200px;
-  min-height: 12.5rem;
-  max-width: 325px;
-  max-width: 20.3125rem;
-  max-height: 205px;
-  max-height: 12.8125rem;
+  width: 100%;
+  max-height: 210px;
+  max-height: 13.125rem;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
