--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -32,3 +32,5 @@
     background: url("images/parallax/backgroundImage5.jpg") center fixed no-repeat
 .parallax__img--seven
     background: url("images/parallax/backgroundImage6.jpg") center fixed no-repeat
+.parallax__img--height
+    background: url("images/parallax/backgroundImage7.jpg") center fixed no-repeat
