--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -28,6 +28,7 @@ wf_link-color                   =    #3498db
 wf_link-color-hover             =    #90b4c5
 wf_quote-color                  =    #eaeaea
 wf_error-color                  =    #c0392b
+wf_asterisque                   =    #3498db
 
 // Background colors.
 wf_background-header            =    #3498db
@@ -36,6 +37,8 @@ wf_background-footer            =    #ffffff
 wf_background-thumbnails        =    #f5f5f5
 wf_background-pagination        =    #f5f5f5
 wf_background-pagination-hover  =    #fafafa
+wf_background-submit            =    #3498db
+wf_background-submit-hover      =    #6db1d8
 
 // Border colors
 wf_border-menu                  =    #fbfbfb
