--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -440,6 +440,9 @@ h6:first-child,
   font-size: 0.875rem;
   font-family: "RobotoBold", sans-serif;
 }
+.asterisque {
+  color: #3498db;
+}
 .quote {
   position: absolute;
   width: 660px;
@@ -590,6 +593,9 @@ h6:first-child,
 .parallax__img--seven {
   background: url("images/parallax/backgroundImage6.jpg") center fixed no-repeat;
 }
+.parallax__img--height {
+  background: url("images/parallax/backgroundImage7.jpg") center fixed no-repeat;
+}
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
 *
@@ -656,8 +662,31 @@ h6:first-child,
 .search__submit:hover {
   cursor: pointer;
 }
+.form {
+  margin: 36px 0;
+  margin: 2.25rem 0rem;
+}
+.form__element {
+  width: 50%;
+  padding: 0 2.5%;
+  margin-bottom: 28px;
+  margin-bottom: 1.75rem;
+}
+.form__element--fullSize {
+  width: 100%;
+  padding: 0 2.5%;
+  margin-bottom: 28px;
+  margin-bottom: 1.75rem;
+}
+.label__text {
+  display: block;
+  margin: 10px 0;
+  margin: 0.625rem 0rem;
+}
 .input__text {
   width: 100%;
+  font-size: 14px;
+  font-size: 0.875rem;
   background-color: #f5f5f5;
   padding: 12px 24px;
   padding: 0.75rem 1.5rem;
@@ -665,6 +694,26 @@ h6:first-child,
 }
 .input__text:focus {
   background-color: #fafafa;
+}
+.input__submit {
+  width: 100%;
+  font-size: 24px;
+  font-size: 1.5rem;
+  font-family: "RobotoHeading", sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 18px 0;
+  padding: 1.125rem 0rem;
+  border: none;
+  background: #3498db;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -ms-transition: all 0.25s;
+  transition: all 0.25s;
+  cursor: pointer;
+}
+.input__submit:hover {
+  background: #6db1d8;
 }
 .error {
   position: relative;
