--- a/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
@@ -15,6 +15,9 @@
     rem-fallback( font-size, 14px )
     font-family wf_font-bold
 
+.asterisque
+    color wf_asterisque
+
 .quote
     position: absolute
     rem-fallback( width, 660px )
